# warp-session-suite

./: .envrc  .gitignore  .gitlab-ci.yml  .mise.toml  .prettierrc  .tool-versions  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INTEGRATION_COMPLETE.md  Jenkinsfile  README.md  advanced_automation.py  analytics_report_20250727_205603.md  analytics_report_20250727_210143.md  analytics_report_20250727_235950.md  auto_healing_system.py  automation_results_20250727_205609.json  automation_results_20250727_210129.json  automation_results_20250727_235934.json  cursor_session_backup_20250727_204359.json  cursor_session_backup_20250727_210123.json  cursor_session_backup_20250727_235931.json  demo_system.py  docker-compose.yml  install.sh  lefthook.yml  mise.toml  mkdocs.yml  pyproject.toml  real_time_monitor.py  realtime_monitor.db  test_warp_cli.py  ultimate_demo.py  ultimate_system_report_20250727_210144.md  ultimate_system_report_20250727_235951.md  unified_analytics.db  unified_cli.py  warp_recovery.sh  warp_session_backup.json  (+1 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.mentat/: format.sh  setup.sh
.trunk/: .gitignore  actions  logs  notifications  out  tools  trunk.yaml
docs/: architecture.md  environment.md  index.md  schema_overview.md
k8s/: deployment.yaml  namespace.yaml  service.yaml
obsidian_export/: warp_session.md
plugins/: __init__.py  registry.json
scripts/: extract-to-obsidian.sh  mentat-env.sh  session-recovery.sh  ws-ai  ws-blocks  ws-commands  ws-replay  ws-sessions
test_data/: warp_test.sqlite
(+31 files in other folders)
